--- a/api/crds/kubefox.xigxog.io_httpadapters.yaml
+++ b/api/crds/kubefox.xigxog.io_httpadapters.yaml
@@ -19,6 +19,8 @@ spec:
     kind: HTTPAdapter
     listKind: HTTPAdapterList
     plural: httpadapters
+    shortNames:
+    - http
     singular: httpadapter
   scope: Namespaced
   versions:
